Correción de servidor del backend#5_uso de Cookies

--- a/index.html
+++ b/index.html
@@ -198,6 +198,6 @@
     <footer>
         <p>&copy; 2025 SaludLink. Todos los derechos reservados.</p>
     </footer>
-    <script src="server.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
